--- a/public/views/viewDay.html
+++ b/public/views/viewDay.html
@@ -1,42 +1,56 @@
-<div class="row"> <!-- open row tag -->
- 
- 
- 	<div class="col s4 m6 l7 left-align" style="padding:1rem;"> <!-- open column one -->		
-<!-- Begin conditional for not my day -->
+<div class="row dayContainer notMyDay"> <!-- open row tag -->
 
-	<h3>Check out this perfect day</h3>
 
-	<div class="daytitle">{{Day.chosenDay.data[0].dayName}}</div>
-	<div data-ng-click="Day.getUserProfile(Day.chosenDay.data[0].userName);">by&nbsp;<a href="">{{Day.chosenDay.data[0].userName}}</a></div>				
-	<div>{{Day.chosenDay.data[0].dayDate}}</div>
-	<div>{{Day.chosenDay.data[0].dayDesc}}</div>
 
-	<div>      
-		<input type="checkbox" class="checkBox" id="teenCheckbox" data-ng-model="day.dayTeen" data-ng-checked="{{Day.chosenDay.data[0].dayTeen}}" />
-		<label for="teenCheckbox">Teen friendly?</label>
-	</div>
-	<div>
-		<input type="checkbox" class="checkBox" id="kidCheckbox" data-ng-checked="{{Day.chosenDay.data[0].dayChild}}" />
-		<label for="kidCheckbox">Kid friendly?</label>
-		</div>
+    <div class="col left-align dayItem dayformBox"> <!-- open column one -->
+        <!-- Begin conditional for not my day -->
 
-	<!-- LOCATION controller begin-->
-<!-- 	<div data-ng-controller="locationController as Location" class="form-group controller" style="margin:10px 0;"> -->
-		<div data-ng-repeat="Location in Day.chosenDay.data[0].locations">
-		<location-list></location-list>
-		</div>
-<!-- 	</div>
- -->	<!-- END LOCATION CONTROLLER -->
+        <div class="dayadvert">Check Out This Perfect Day</div>
 
-	<div style="margin-bottom:24px;">Tags: {{Day.chosenDay.data[0].dayTags}}</div>
-	
-	<button class="btn btn-default" data-ng-click="User.userViewSwitch='grid'" type="submit">Return home</button> 
-	</div>
-<!-- End conditional for not my day -->
-	</div> <!-- close column 1 -->
+        <div class="daytitle">{{Day.chosenDay.data[0].dayName}}</div>
 
-	<div class="col s8 m6 l5 left-align"> <!-- open column 2 -->
-		<div id="map-canvas"></div>
-	</div> <!-- close column 2 -->
-</div>    <!--close row tag -->
+        <div class="daydesc">{{Day.chosenDay.data[0].dayDesc}}</div>
 
+        <div data-ng-click="Day.getUserProfile(Day.chosenDay.data[0].userName);">by&nbsp;<a href="">{{Day.chosenDay.data[0].userName}}</a>
+        </div>
+
+        <div class="daydate">{{Day.chosenDay.data[0].dayDate}}</div>
+
+        <div class="teenfriendly">
+            <input type="checkbox" class="checkBox" id="teenCheckbox" data-ng-model="day.dayTeen"
+                   data-ng-checked="{{Day.chosenDay.data[0].dayTeen}}"/>
+            <label for="teenCheckbox">Teen friendly?
+            </label>
+        </div>
+
+        <div class="kidfriendly">
+            <input type="checkbox" class="checkBox" id="kidCheckbox"
+                   data-ng-checked="{{Day.chosenDay.data[0].dayChild}}"/>
+            <label for="kidCheckbox">Kid friendly?
+            </label>
+        </div>
+
+        <!-- LOCATION controller begin-->
+        <!-- 	<
+        div data-ng-controller="locationController as Location" class="form-group controller" style="margin:10px 0;"> -->
+        <div class="locationlist" data-ng-repeat="Location in Day.chosenDay.data[0].locations">
+            <location-list></location-list>
+        </div>
+        <!-- 	</div>
+         -->    <!-- END LOCATION CONTROLLER -->
+
+        <div class="taglist">Tags: {{Day.chosenDay.data[0].dayTags}}</div>
+
+        <button class="btn btn-default" data-ng-click="User.userViewSwitch='grid'" type="submit">Return home</button>
+
+    </div> <!-- close column 1 -->
+
+
+    <div class="col left-align dayItem mapBox"> <!-- open column 2 -->
+
+        <div id="map-canvas" class="mapPosition"></div>
+
+    </div> <!-- close column 2 -->
+
+</div>
+<!--close notMyDay-->
