--- a/public/views/reg-view.html
+++ b/public/views/reg-view.html
@@ -10,13 +10,11 @@
 			style ='cursor: pointer;'>clear
 		</i>
 
-		<div class='loginDirection'>
+		<div class='loginDirection' data-ng-click="User.userViewSwitch='profile';
+ 											  User.profileSelect('Log');">
 			Register 
 
 
-			<span class="link underline" data-ng-click="User.userViewSwitch='profile'; 
- 											  User.profileSelect('Log');">
-											  (or Login with Facebook)</span>
 		</div>
 		
 		<br>
