--- a/public/views/user-function-view.html
+++ b/public/views/user-function-view.html
@@ -84,12 +84,11 @@
 							style ='cursor: pointer;'>clear
 						</i>
 
-						<div class='loginDirection'>
+						<div class='loginDirection' data-ng-click="User.userViewSwitch = 'profile';
+															  User.userFunction='NEWREG'; ">
 							Register 
 
-							<span class="link" data-ng-click="User.userViewSwitch = 'profile';
-															  User.userFunction='NEWREG'; ">
-															  (or Login with Facebook)</span>
+
   						</div>
 						
 			
