--- a/public/views/viewDay.html
+++ b/public/views/viewDay.html
@@ -27,16 +27,15 @@
 		</div>
 <!-- 	</div>
  -->	<!-- END LOCATION CONTROLLER -->
-
 	<div style="margin-bottom:24px;">Tags: {{Day.chosenDay.data[0].dayTags}}</div>
 	
 	<button class="btn btn-default" data-ng-click="User.userViewSwitch='grid'" type="submit">Return home</button> 
-	</div>
+	</div><!-- close column 1 -->
 <!-- End conditional for not my day -->
-	</div> <!-- close column 1 -->
 
-	<div class="col s8 m6 l5 left-align"> <!-- open column 2 -->
+
+	<div class="col left-align"> <!-- open column 2 -->
 		<div id="map-canvas"></div>
 	</div> <!-- close column 2 -->
-</div>    <!--close row tag -->
+</div>  <!--close row tag -->
 
