--- a/public/views/grid-day-view.html
+++ b/public/views/grid-day-view.html
@@ -30,9 +30,10 @@
 				<div class="location">
 					<div class="locationName">{{location.location}}</div>
 					<div class="locDesc">{{location.desc}}</div>
+                    <div data-ng-if="location.photosThumb">
 					<div data-ng-repeat="photo in location.photosThumb track by $index" class="thumbPhotos">
 						<img src="{{photo}}"></img>
-					</div>
+					</div></div>
 				</div>
 			</div>
  			<div class="tags">{{day.dayTags}}</div>
