about policy changes and css

--- a/public/views/foot-of-page.html
+++ b/public/views/foot-of-page.html
@@ -7,7 +7,7 @@
 			<div class = 'privacypolicy' 
 			data-ng-click="User.profileSelect('privacypolicy');
 						   User.userViewSwitch='profile';"> 
-			Privacy Policy</div>
+			About Daybreak & Privacy Policy</div>
 		</div>
 	</div>
 </footer>
