--- a/public/views/privacypolicy.html
+++ b/public/views/privacypolicy.html
@@ -1,24 +1,35 @@
 <div class = 'regSurround'>
 
+<h3>About Daybreak - Perfect Day</h3>
+
+    <p>Daybreak is a technology demonstration project by Wendy Beck and Miles Hochstein, based on an idea by Cris Kelly.</p>
+    <p>Daybreak was developed in 2015 to showcase our skills in AngularJS, Node, Javascript and related MEAN stack technologies.</p>
+    <p>A partial list of technologies deployed includes: </p>
+    <p>&bull;&nbsp;AngularJS </p>
+    <p>&bull;&nbsp;NodeJS </p>
+    <p>&bull;&nbsp;Google Maps API and Google Location Services </p>
+    <p>&bull;&nbsp;Javascript </p>
+    <p>&bull;&nbsp;CSS/SCSS </p>
+    <p>&bull;&nbsp;Mongoose </p>
+    <p>&bull;&nbsp;Mongo Database (Native and MongoLabs)</p>
+    <p>&bull;&nbsp;Mailgun </p>
+    <p>&bull;&nbsp;Ubuntu on Digital Ocean </p>
+    <p>...and more. </p>
+
+    <p>Daybreak is available for account creation and use on a limited demonstration basis.</p>
+
 <h3> Privacy Policy </h3>
+    <p>This privacy policy sets out how “Daybreak” uses and protects any information that you give “Daybreak” when you use this website.</p>
 
-<h4>(SAMPLE TEXT - TO BE REPLACED)</h4>
+<p>“Daybreak” is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using this website, then you can be assured that it will only be used in accordance with this privacy statement.</p>
 
-<p>This privacy policy sets out how “A Perfect Day” uses and protects any information that you give “A Perfect Day” when you use this website.</p>
-
-<p>“A Perfect Day” is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using this website, then you can be assured that it will only be used in accordance with this privacy statement.</p>
-
-<p>“A Perfect Day” may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you are happy with any changes. This policy is effective from October 1, 2015.</p>
+<p>“Daybreak” may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you are happy with any changes. This policy is effective from October 1, 2015.</p>
 
 <h5>What we collect</h5>
 
 <p>We may collect the following information:</p>
 
-<p>&bull;&nbsp; Your email address, username and password </p>
- 
-<p>&bull;&nbsp;demographic information such as postcode, preferences and interests</p>
-
-<p>&bull;&nbsp;other information relevant to customer surveys and/or offers</p>
+<p>&bull;&nbsp; Your email address, username and password and any other information you volunteer in the course of routine site use. </p>
 
 <h5>What we do with the information we gather</h5>
 
@@ -43,35 +54,21 @@
 <p>We are committed to ensuring that your information is secure. In order to prevent unauthorized access or disclosure we have put in place suitable physical, electronic and managerial procedures to safeguard and secure the information we collect online.</p>
 
 
-<h5>How we use cookies</h5>
+<h5>How we use tokens</h5>
 
-<p>A cookie is a small file which asks permission to be placed on your computer's hard drive. Once you agree, the file is added and the cookie helps analyze web traffic or lets you know when you visit a particular site. Cookies allow web applications to respond to you as an individual. The web application can tailor its operations to your needs, likes and dislikes by gathering and remembering information about your preferences. </p>
-
-<p>We use traffic log cookies to identify which pages are being used. This helps us analyze data about web page traffic and improve our website in order to tailor it to customer needs. We only use this information for statistical analysis purposes and then the data is removed from the system. </p>
-
-<p>Overall, cookies help us provide you with a better website, by enabling us to monitor which pages you find useful and which you do not. A cookie in no way gives us access to your computer or any information about you, other than the data you choose to share with us.</p> 
-
-<p>You can choose to accept or decline cookies. Most web browsers automatically accept cookies, but you can usually modify your browser setting to decline cookies if you prefer. This may prevent you from taking full advantage of the website.</p>
+<p>A token is a small file that identifies you to our server.  When you create an account and login we place a token on your browser's local storage, enabling you to remain logged in for a period of time without re-entering your name and password.     </p>
 
 
-<h5>Links to other websites</h5>
+    <h5>Links to other websites</h5>
 
 <p>Our website may contain links to enable you to visit other websites of interest easily. However, once you have used these links to leave our site, you should note that we do not have any control over that other website. Therefore, we cannot be responsible for the protection and privacy of any information which you provide whilst visiting such sites and such sites are not governed by this privacy statement. You should exercise caution and look at the privacy statement applicable to the website in question.</p>
  
 
 <h5>Controlling your personal information</h5>
 
-<p>You may choose to restrict the collection or use of your personal information in the following ways:</p>
+<p>The information you share with Daybreak remains available to the public, unless you hide it or delete your account</p>
 
-<p>&bull;&nbsp;whenever you are asked to fill in a form on the website, look for the box that you can click to indicate that you do not want the information to be used by anybody for direct marketing purposes</p>
+    <p>Hidden or deleted information may be retained in our archival files, but will no longer be available on the public facing website.</p>
 
-<p>&bull;&nbsp;if you have previously agreed to us using your personal information for direct marketing purposes, you may change your mind at any time by writing to or emailing us at info@perfectdaybreak.com</p>
 
-<p>We will not sell, distribute or lease your personal information to third parties unless we have your permission or are required by law. We may use your personal information to send you promotional information about third parties which we think you may find interesting if you tell us that you wish this to happen.</p>
-
-<p>You may request details of personal information which we hold about you under the Data Protection Act 1998. A small fee will be payable. If you would like a copy of the information held on you please write to [address].</p>
-
-<p>If you believe that any information we are holding on you is incorrect or incomplete, please write to or email us as soon as possible, at the above address. We will promptly correct any information found to be incorrect.</p>
-
-</div>
 
