configuring for server deploy

--- a/public/views/privacypolicy.html
+++ b/public/views/privacypolicy.html
@@ -8,7 +8,10 @@
     <p>&bull;&nbsp;AngularJS </p>
     <p>&bull;&nbsp;NodeJS </p>
     <p>&bull;&nbsp;Google Maps API and Google Location Services </p>
-    <p>&bull;&nbsp;Javascript </p>
+    <p>&bull;&nbsp;Javascript... </p>
+    <p>&bull;&nbsp;Tag based search </p>
+    <p>&bull;&nbsp;User Registration, Login, and Account Maintenance </p>
+    <p>&bull;&nbsp;Media responsive flexible design for multiple screen sizes</p>
     <p>&bull;&nbsp;CSS/SCSS </p>
     <p>&bull;&nbsp;Mongoose </p>
     <p>&bull;&nbsp;Mongo Database (Native and MongoLabs)</p>
@@ -66,7 +69,7 @@
 
 <h5>Controlling your personal information</h5>
 
-<p>The information you share with Daybreak remains available to the public, unless you hide it or delete your account</p>
+<p>Your days and your public user information (username, account creation date, and brief "about me" statement) that you share with Daybreak remains available to the public, unless you hide it or delete your account</p>
 
     <p>Hidden or deleted information may be retained in our archival files, but will no longer be available on the public facing website.</p>
 
