--- a/public/views/my-user-functions.html
+++ b/public/views/my-user-functions.html
@@ -8,7 +8,7 @@
 													   User.userViewSwitch='grid';
 													   User.userMessage='';
 														">
-					 Daybreak</div>
+					 The Perfect Day</div>
 				</a>
 
 				<a href="#" data-activates="slide-out" class="button-collapse right">
@@ -136,5 +136,3 @@
 		});
 	});
 </script>
-
-
