--- a/public/views/user-profile-page.html
+++ b/public/views/user-profile-page.html
@@ -5,23 +5,23 @@
 	 <div data-ng-switch-when="NEWREG">
 		<reg-view></reg-view>
 	</div>
- 
+
 	 <div data-ng-switch-when="Log">
 		<login-view></login-view>
 	</div>
- 
-	 <div data-ng-switch-when="recoverPassword">
+
+	 <!-- <div data-ng-switch-when="recoverPassword">
 		<pwd-recover></pwd-recover>
 	</div>
- 
+
 	 <div data-ng-switch-when="recoverPassword">
 		<pwd-loggedoutpwdreset></pwd-loggedoutpwdreset>
 	</div>
- 
+
 	 <div data-ng-switch-when="facebook">
 		<facebook-login></facebook-login>
-	</div>
- 
+	</div> -->
+
 <!-- LOGGED IN FUNCTIONS -->
 
 	 <div data-ng-switch-when="myAccount">
@@ -31,7 +31,7 @@
 	 <div data-ng-switch-when="deleteaccount">
 	 	 <deleteaccount></deleteaccount>
 	</div>
- 
+
 	 <div data-ng-switch-when="passwordreset">
 	 	 <password-reset></password-reset>
 	</div>
@@ -41,7 +41,7 @@
 	</div>
 
 <!-- LOGGED IN OR OUT FUNCTIONS -->
- 
+
 	 <div data-ng-switch-when="otherprofile">
 		<otherprofile></otherprofile>
 	</div>
@@ -51,5 +51,3 @@
 	</div>
 
 </div>
-
-
