updating node modules to run on digital ocean

--- a/public/views/modalContent.html
+++ b/public/views/modalContent.html
@@ -4,7 +4,7 @@ You can start by creating an account and then, after verifying your email addres
 <br><br>
 The Perfect Day is a MEAN stack SPA, built using Node.js, Angular 1, Express and MongoDB.
 <br><br>It includes RESTful APIs to access MongoDB and also uses the Google Maps API to retrieve map locations and photos of locations.
-<br><br>Additionally, it uses jQueryUI, Materialize, Angular UI and SCSS for styling. There are media queries to make site responsive on different sizes of devices.
+<br><br>Additionally, it uses jQueryUI, Materialize, AngularUI and SCSS for styling. There are media queries to make the site responsive on different sizes of devices.
 <br><br>Behind the scenes are directives - to place the relevant sections on the page - and a Gulp file that compiles and minifies SCSS and JavaScript, builds sourcemaps and watches the code for changes.
 <br><br>The server uses PM2 to keep the app running.
 <br><br>The code for A Perfect Day can be found on <a href="https://github.com/wbeck32/daybreak" style="text-decoration:underline;">Github</a>.
