--- a/public/views/modalContent.html
+++ b/public/views/modalContent.html
@@ -6,5 +6,5 @@ The Perfect Day is a MEAN stack SPA, built using Node.js, Angular 1, Express and
 <br><br>It includes RESTful APIs to access MongoDB and also uses the Google Maps API to retrieve map locations and photos of locations.
 <br><br>Additionally, it uses jQueryUI, Materialize, AngularUI and SCSS for styling. There are media queries to make the site responsive on different sizes of devices.
 <br><br>Behind the scenes are directives - to place the relevant sections on the page - and a Gulp file that compiles and minifies SCSS and JavaScript, builds sourcemaps and watches the code for changes.
-<br><br>The server uses PM2 to keep the app running.
+<br><br>The server uses PM2 to keep the app and the mongod daemon running.
 <br><br>The code for A Perfect Day can be found on <a href="https://github.com/wbeck32/daybreak" style="text-decoration:underline;">Github</a>.
